--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
@@ -53,6 +53,9 @@
         }
     },
     "config": {
+        "platform": {
+            "php": "8.0.2"
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
